--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -107,6 +107,16 @@
     <ClCompile Include="SourceCodo\GameObject.cpp" />
     <ClCompile Include="SourceCodo\Main.cpp" />
     <ClCompile Include="SourceCodo\Object.cpp" />
+    <ClCompile Include="SourceCodo\PartsArmBase.cpp" />
+    <ClCompile Include="SourceCodo\PartsArmL.cpp" />
+    <ClCompile Include="SourceCodo\PartsArmR.cpp" />
+    <ClCompile Include="SourceCodo\PartsArms.cpp" />
+    <ClCompile Include="SourceCodo\PartsBase.cpp" />
+    <ClCompile Include="SourceCodo\PartsCore.cpp" />
+    <ClCompile Include="SourceCodo\PartsSet.cpp" />
+    <ClCompile Include="SourceCodo\PartsHead.cpp" />
+    <ClCompile Include="SourceCodo\PartsLeg.cpp" />
+    <ClCompile Include="SourceCodo\PartsWeapon.cpp" />
     <ClCompile Include="SourceCodo\PtrGroup.cpp" />
     <ClCompile Include="SourceCodo\Ray.cpp" />
     <ClCompile Include="SourceCodo\Resource.cpp" />
@@ -163,6 +173,16 @@
     <ClInclude Include="SourceCodo\Object.h" />
     <ClInclude Include="SourceCodo\ObjSkinMesh.h" />
     <ClInclude Include="SourceCodo\ObjStaticMesh.h" />
+    <ClInclude Include="SourceCodo\PartsArmBase.h" />
+    <ClInclude Include="SourceCodo\PartsArmL.h" />
+    <ClInclude Include="SourceCodo\PartsArmR.h" />
+    <ClInclude Include="SourceCodo\PartsArms.h" />
+    <ClInclude Include="SourceCodo\PartsBase.h" />
+    <ClInclude Include="SourceCodo\PartsCore.h" />
+    <ClInclude Include="SourceCodo\PartsSet.h" />
+    <ClInclude Include="SourceCodo\PartsHead.h" />
+    <ClInclude Include="SourceCodo\PartsLeg.h" />
+    <ClInclude Include="SourceCodo\PartsWeapon.h" />
     <ClInclude Include="SourceCodo\PtrGroup.h" />
     <ClInclude Include="SourceCodo\Ray.h" />
     <ClInclude Include="SourceCodo\Resource.h" />
