--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -43,6 +43,12 @@
     <Filter Include="Classwork\System">
       <UniqueIdentifier>{2eb3484b-fef4-4d30-a7a1-005746d785b0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Tahara\PartsData">
+      <UniqueIdentifier>{b5aeb1f2-bcba-44de-9d5b-0830a69be293}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Tahara\PartsData\Arms">
+      <UniqueIdentifier>{13bfdd1e-cae3-4b0a-9036-574141e70255}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourceCodo\CD3DXSKINMESH.cpp">
@@ -164,6 +170,36 @@
     </ClCompile>
     <ClCompile Include="SourceCodo\CameraGameOver.cpp">
       <Filter>Hiyosi\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsLeg.cpp">
+      <Filter>Tahara\PartsData</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsCore.cpp">
+      <Filter>Tahara\PartsData</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsHead.cpp">
+      <Filter>Tahara\PartsData</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsWeapon.cpp">
+      <Filter>Tahara\PartsData</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsBase.cpp">
+      <Filter>Tahara\PartsData</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsSet.cpp">
+      <Filter>Tahara\PartsData</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsArmBase.cpp">
+      <Filter>Tahara\PartsData\Arms</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsArms.cpp">
+      <Filter>Tahara\PartsData\Arms</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsArmL.cpp">
+      <Filter>Tahara\PartsData\Arms</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\PartsArmR.cpp">
+      <Filter>Tahara\PartsData\Arms</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -310,6 +346,36 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\CameraGameOver.h">
       <Filter>Hiyosi\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsLeg.h">
+      <Filter>Tahara\PartsData</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsCore.h">
+      <Filter>Tahara\PartsData</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsHead.h">
+      <Filter>Tahara\PartsData</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsWeapon.h">
+      <Filter>Tahara\PartsData</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsBase.h">
+      <Filter>Tahara\PartsData</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsSet.h">
+      <Filter>Tahara\PartsData</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsArmBase.h">
+      <Filter>Tahara\PartsData\Arms</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsArms.h">
+      <Filter>Tahara\PartsData\Arms</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsArmL.h">
+      <Filter>Tahara\PartsData\Arms</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\PartsArmR.h">
+      <Filter>Tahara\PartsData\Arms</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
