--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClCompile Include="SourceCodo\PartsArmR.cpp">
       <Filter>Tahara\Parts\Arms</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCodo\AssembleModel.cpp">
+      <Filter>Tahara</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCodo\Charactor.h">
@@ -379,6 +382,9 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\PartsArmR.h">
       <Filter>Tahara\Parts\Arms</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\AssembleModel.h">
+      <Filter>Tahara</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
