--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="Tahara\Parts\Arms">
       <UniqueIdentifier>{ce180e55-01a4-4623-a574-98f54dfab2cd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Hiyosi\Enemy">
+      <UniqueIdentifier>{fa11f2f1-fb32-4caa-b1f7-b22f8b14f6b0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourceCodo\Charactor.cpp">
@@ -203,6 +206,12 @@
     </ClCompile>
     <ClCompile Include="SourceCodo\AssembleModel.cpp">
       <Filter>Tahara</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\Enemy.cpp">
+      <Filter>Hiyosi\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\EnemyRobo.cpp">
+      <Filter>Hiyosi\Enemy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -385,6 +394,12 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\AssembleModel.h">
       <Filter>Tahara</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\Enemy.h">
+      <Filter>Hiyosi\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\EnemyRobo.h">
+      <Filter>Hiyosi\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
