--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="SourceCodo\Ray.cpp" />
     <ClCompile Include="SourceCodo\Resource.cpp" />
     <ClCompile Include="SourceCodo\Robo.cpp" />
+    <ClCompile Include="SourceCodo\RoboStatus.cpp" />
     <ClCompile Include="SourceCodo\SceneAssemble.cpp" />
     <ClCompile Include="SourceCodo\SceneClass.cpp" />
     <ClCompile Include="SourceCodo\SceneEnding.cpp" />
@@ -194,6 +195,7 @@
     <ClInclude Include="SourceCodo\Resource.h" />
     <ClInclude Include="SourceCodo\Robo.h" />
     <ClInclude Include="SourceCodo\RoboCommand.h" />
+    <ClInclude Include="SourceCodo\RoboStatus.h" />
     <ClInclude Include="SourceCodo\SceneAssemble.h" />
     <ClInclude Include="SourceCodo\SceneClass.h" />
     <ClInclude Include="SourceCodo\SceneEnding.h" />
