--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="SourceCodo\PartsHead.cpp" />
     <ClCompile Include="SourceCodo\PartsLeg.cpp" />
     <ClCompile Include="SourceCodo\PartsWeapon.cpp" />
+    <ClCompile Include="SourceCodo\Player.cpp" />
     <ClCompile Include="SourceCodo\PtrGroup.cpp" />
     <ClCompile Include="SourceCodo\Ray.cpp" />
     <ClCompile Include="SourceCodo\Resource.cpp" />
@@ -192,6 +193,7 @@
     <ClInclude Include="SourceCodo\PartsHead.h" />
     <ClInclude Include="SourceCodo\PartsLeg.h" />
     <ClInclude Include="SourceCodo\PartsWeapon.h" />
+    <ClInclude Include="SourceCodo\Player.h" />
     <ClInclude Include="SourceCodo\PtrGroup.h" />
     <ClInclude Include="SourceCodo\Ray.h" />
     <ClInclude Include="SourceCodo\Resource.h" />
