--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClCompile Include="SourceCodo\AssembleUi.cpp">
       <Filter>Tahara\AssembleUI</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCodo\Player.cpp">
+      <Filter>Hiyosi</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCodo\Charactor.h">
@@ -418,6 +421,9 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\AssembleUi.h">
       <Filter>Tahara\AssembleUI</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\Player.h">
+      <Filter>Hiyosi</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
